# short-video

./: .gitignore  README.md
backend-video-shorter/: README.md  pyproject.toml
backend-video-shorter/backend/: __init__.py  clip_creator.py  config.py  main.py
backend-video-shorter/backend/models/: __init__.py  clip_request.py  clip_response.py
backend-video-shorter/backend_video_shorter/: clip_creator.py  main.py
backend-video-shorter/tests/unit/: clip_creator_test.py
deployment/: README.md
deployment/cd/: staging.yaml
deployment/ci/: pr_checks.yaml
deployment/terraform/: backend.tf  build_triggers.tf  iam.tf  locals.tf  service_accounts.tf  storage.tf  variables.tf
