[tool.poetry]
name = "backend-video-shorter"
version = "0.1.0"
description = ""
authors = ["Julien MIQUEL <julienmiquel@google.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.7"
google-cloud-logging = "^3.11.3"
google-genai = "^0.6.0"
google-cloud-aiplatform = "^1.78.0"
uvicorn = "^0.34.0"
pytube = "^15.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn app:app --reload"  # Or your correct import string